<resources>

    <!-- GENERAL -->
    <string name="app_name">Get Up &#38; Go</string>
    <string name="title_activity_edit_user">EditUserActivity</string>

    <!-- TITLES -->
    <string name="edit_title">Edit User</string>
    <string name="name_title">Name:</string>
    <string name="age_title">Age:</string>
    <string name="grade_title">Grade:</string>
    <string name="teacher_title">Teacher:</string>
    <string name="archive_user">Archived</string>
    <string name="show_archived">Show Archived Users</string>

    <!-- BUTTON STRINGS -->
    <string name="add_user">Add User</string>
    <string name="user_details">Details</string>
    <string name="home">Home</string>
    <string name="save_user">Save</string>
    <string name="done">Done</string>
    <string name="delete">DELETE USER</string>

</resources>
